--- a/app/src/main/res/layout/layout_zoomin.xml
+++ b/app/src/main/res/layout/layout_zoomin.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/diary_ZoomIn_Root"
     android:layout_width="match_parent"
@@ -8,7 +8,7 @@
     android:clickable="true"
     android:onClick="diary_ZoomIn_CloseZoomIn">
 
-    <android.support.constraint.ConstraintLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="20sp"
@@ -51,7 +51,7 @@
             android:src="@drawable/moveright"
             android:clickable="false"/>
 
-        <android.support.constraint.ConstraintLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/diary_ZoomIn_NameBox"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -84,7 +84,7 @@
                 android:layout_marginHorizontal="20sp"
                 app:layout_constraintBottom_toBottomOf="@id/diary_ZoomIn_NameBox"
                 app:layout_constraintTop_toBottomOf="@id/diary_ZoomIn_ZoomName1" />
-        </android.support.constraint.ConstraintLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
         <Button
             android:id="@+id/diary_ZoomIn_Confirm"
@@ -98,5 +98,5 @@
             android:visibility="gone"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@id/diary_ZoomIn_ZoomImage" />
-    </android.support.constraint.ConstraintLayout>
-</android.support.constraint.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
